<resources>

    <string name="app_name">On Duty v2</string>
    <string name="title_activity_menu">Panel de On Duty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_save">Guardar</string>
    <string name="action_logout">Cerrar sesión</string>

    <!-- User data -->
    <string name="full_name">Nombre completo</string>
    <string name="email">E-mail</string>
    <string name="rol">Rol</string>
    <string name="department">Departamento</string>
    <string name="position">Cargo</string>
    <string name="location">Localización</string>

    <!-- Report data -->
    <string name="report_description">Descripción</string>
    <string name="report_planned_date">Fecha planificada</string>
    <string name="report_deadline">Fecha de cierre</string>
    <string name="report_actions">Acciones a tomar</string>
    <string name="report_inspections"># Inspecciones</string>
    <string name="report_observations">Observaciones</string>

    <string name="report_work_front">Frente de trabajo</string>
    <string name="report_area">Área</string>
    <string name="report_responsible">Responsable</string>
    <string name="report_state">Estado</string>
    <string name="report_aspect">Aspecto</string>
    <string name="report_potential">Potencial</string>
    <string name="report_critical_risk">Riesgo crítico</string>


    <!-- Error messages -->
    <string name="error_description">Es necesario ingresar una descripción</string>
    <string name="error_inspections">Es necesario ingresar un nro de inspecciones</string>

    <string name="error_planned_date">Es necesario ingresar una fecha de planificación</string>
    <string name="error_deadline">Es necesario ingresar una fecha de finalización</string>

    <string name="error_inform_start">Es necesario ingresar una fecha de inicio</string>
    <string name="error_inform_end">Es necesario ingresar una fecha de cierre</string>

    <!-- Spinner options -->

    <string-array name="aspect_options">
        <item>Por mejorar</item>
        <item>Positivo</item>
    </string-array>

    <string-array name="potential_options">
        <item>Alto</item>
        <item>Medio</item>
        <item>Bajo</item>
    </string-array>

    <string-array name="state_options">
        <item>Abierto</item>
        <item>Cerrado</item>
    </string-array>

    <!-- Take image options -->
    <string name="picture_title">Imagen</string>
    <string name="picture_from_camera">Capturar foto</string>
    <string name="picture_from_gallery">Seleccionar de galería</string>
    <string name="picture_cancel">Cancelar</string>
    <string name="picture_chooser_title">Selecciona una imagen</string>
    <string name="failure_retrofit_callback">No fue posible establecer conexión con el servidor</string>
    <string name="failure_downloading_all_informs">No se pudo descargar la lista de informes</string>
    <string name="performing_a_full_download">Actualizando el listado informes y sus reportes &#8230;</string>
    <string name="performing_a_smart_download">Verificando actualizaciones</string>
    <string name="error_retrofit_callback">Ocurrió un error al intentar conectarse con el servidor</string>
    <string name="error_retrofit_response">El servidor no ha respondido correctamente</string>

</resources>
