<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:fitsSystemWindows="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDescription"
                    android:hint="@string/report_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="6dp"
                android:text="Capturar imagen del reporte:"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnTakeImage"
                app:srcCompat="@drawable/ic_camera_alt_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_work_front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerWorkFront"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_responsible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerResponsible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPlannedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPlannedDate"
                    android:hint="@string/report_planned_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDeadline"
                    android:hint="@string/report_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerState"
                android:entries="@array/state_options"
                style="?android:attr/dropDownItemStyle"
                android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:ellipsize="marquee" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="Acciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etActions"
                    android:hint="@string/report_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="6dp"
                android:text="Capturar imagen de las acciones:"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btnTakeImageAction"
                app:srcCompat="@drawable/ic_camera_alt_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_aspect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerAspect"
                android:entries="@array/aspect_options"
                style="?android:attr/dropDownItemStyle"
                android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:ellipsize="marquee" />

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_potential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerPotential"
                android:entries="@array/potential_options"
                style="?android:attr/dropDownItemStyle"
                android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:ellipsize="marquee" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilInspections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etInspections"
                    android:text="1"
                    android:hint="@string/report_inspections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="6dp"
                android:text="@string/report_critical_risk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinnerCriticalRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilObservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etObservations"
                    android:hint="@string/report_observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:maxLines="2" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>